schema/testdata/validation_permission_attribute_missing_condition/schema.keel
model Person {
    operations {
        get getPerson(id)
    }
    @permission(
        actions: [get]
    )
}